2006-08-13  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive.glade: some GNOME HIG-compilant changes:
       - place OK buttons to the right side
       - align buttons to the right
       - specify default buttons

2006-08-10  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/log.py: implemented OliveLog (calls BzrkApp)
    * olive/frontend/gtk/viz/diffwin.py: made it bzrlib 0.9 API compatible
    * olive/frontend/gtk/viz/bzrkapp.py: don't quit main loop
    * olive/frontend/gtk/viz: added bzrk codebase for Log functionality
    * setup.py: added olive.frontend.gtk.viz package
    * olive/backend/info_helper.py: made it 0.9 API compatible
    * olive/backend/info.py: small bug fixed
    * olive/frontend/gtk/info.py: implemented Information window
    * olive.glade: added Informations window
    * Olive is two months old!

2006-08-09  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/__init__.py: simplified preference handling
    * olive/frontend/gtk/handler.py: window preferences are stored on quit
    * olive.glade: added Rename dialog
    * olive/frontend/gtk/rename.py: implemented OliveRename
    * olive/frontend/gtk/handler.py: added Rename signal handler
    * olive/frontend/gtk/__init__.py: fixed the double-click Bookmarks bug
    * olive/frontend/gtk/move.py: implemented OliveMove
    * olive/frontend/gtk/handler.py: added Move signal handler
    * olive.glade: added Move dialog
    * olive/backend/errors.py: added NotSameBranchError
    * olive/backend/fileops.py: added NotBranchError and NotSameBranchError
      support to move()
    * olive/backend/fileops.py: added NotBranchError support to mkdir()
    * olive/frontend/gtk/mkdir.py: implemented OliveMkdir
    * olive/frontend/gtk/handler.py: added Make directory signal handler
    * olive.glade: added Make directory dialog
    * olive/backend/update.py: added NotBranchError support to pull()