@@ -13,3 +13,7 @@ TODO list for Olive
  - Save and restore main window position and size (phanatic)
  - Real sensitive context menu - e.g. options are grey if not a branch
    (phanatic)
+ - Implement 'bzr missing' (phanatic)
+ - Implement 'bzr uncommit' (phanatic)
+ - Implement bundle handling - at least creating them (phanatic)
+ - Testing on Windows platform (phanatic)
