@@ -1627,7 +1627,6 @@
 
 <widget class="GtkWindow" id="window_push">
   <property name="width_request">300</property>
-  <property name="visible">True</property>
   <property name="title" translatable="yes">Olive - Push</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
